moved scripts to scripts dir, updated readme, cleaned up 404

--- a/website/pages/404.md
+++ b/website/pages/404.md
@@ -1,5 +1,13 @@
 ---
-title: Lost from journey
-layout: 404
+title: No Dice
+layout: page
 permalink: "/404.html"
 ---
+
+# 404
+
+## Hmm... I can't seem to find what you're looking for. 
+
+Maybe try the [homepage](/)?
+
+...or [contact me](/contact) if you think something is broken.
