final - fix typos, missing links

--- a/website/_posts/blog/2024-03-24-Spring-AI.md
+++ b/website/_posts/blog/2024-03-24-Spring-AI.md
@@ -8,16 +8,18 @@ tags: Spring AI LLM Agent java AI function
 I recently came across the [Spring AI](https://docs.spring.io/spring-ai/reference/index.html) project, which "aims to 
 streamline the development of applications that incorporate artificial intelligence functionality without unnecessary complexity."
 
-Thus far, I've been relying on the [LangChain4J]() Framework for my AI projects, but as a Java developer & Spring enthusiast, 
+Thus far, I've been relying on the [LangChain4J](https://github.com/langchain4j/langchain4j/) Framework for my AI projects, but as a Java developer & Spring enthusiast, 
 I was excited to see what Spring AI had to offer. Unfortunately, at the time of writing, the latest stable release `0.8.1`
 does not support function calling, which is critical for most advanced use cases. As such, I will be working using the unstable 
 `1.0.0-SNAPSHOT`. Function calls enable the Agent to "interact" with the rest of our software & 3rd party services--The
-framwork will intercept a tool invocation request & call the appropriate method defined in the callback.
+framework will intercept a tool invocation request & call the appropriate method defined in the callback.
 
 **Today's Project:** Today We will be building a simple Spring AI agent that will help manage a dummy hotel booking system.
+It will be able to check availability, book rooms, and look up bookings by guest name. Function calls will be used to expose
+these capabilities to the Agent.
 
 I'm going to keep this project simple and focus more on utilizing the Spring AI framework rather than building a bullet-proof,
-production ready Agent. All the code will be available on my [GitHub](https://github.com/johnsosoka/code-examples/tree/main/java/spring-ai-booking)
+production ready Agent. The complete code will be available on [GitHub](https://github.com/johnsosoka/code-examples/tree/main/java/spring-ai-booking)
 
 ## Getting Started
 
@@ -108,7 +110,7 @@ The hotel booking agent will be a simple agent that can handle the following com
 
 * check availability
 * book a room
-* cancel a booking
+* look up a booking by guest name
 
 In addition to these command capabilities, we will be using a simple in-memory data store to manage both the hotel bookings 
 and the conversation context. I mentioned earlier that this exploration is more about the Spring AI framework than building a 
@@ -135,6 +137,8 @@ as it is not the focus of this post, I do want to point out some conditions I've
     }
 ```
 
+The full service can be found [here](https://github.com/johnsosoka/code-examples/blob/main/java/spring-ai-booking/src/main/java/com/johnsosoka/springaibooking/service/HotelBookingService.java).
+
 While the service exposes methods to check availability, book a room, and cancel a booking, the LLM Agent will not be able 
 to interact with the service directly. To wire up the service to the LLM Agent, we will need to define a function and 
 expose it to the LLM Agent.
@@ -155,7 +159,7 @@ public class MockWeatherService implements Function<Request, Response> {
 ```
 
 The above is supposed to wrap a 3rd party service. After spending some time reading the documentation and source code, I was
-unable to find a way to expose multipe methods on a service without creating multiple classes. I was really hoping that
+unable to find a way to expose multiple methods on a service without creating multiple classes. I was really hoping that
 exposing a service call would be as simple as a `@Tool` annotation on a method, like in the `LangChain4J` framework.
 
 #### Booking Tools
