--- a/website/_posts/blog/2024-03-24-Spring-AI.md
+++ b/website/_posts/blog/2024-03-24-Spring-AI.md
@@ -461,8 +461,8 @@ One other quip I have with the Spring AI Framework is that we do not get as much
 under the hood. With `LangChain4J` we can stash the function requests/responses in a chat `MemoryStore` which would
 enable agents to track their tool executions over a long form conversation. This doesn't seem easily possible with the
 current SNAPSHOT version of Spring AI. The common example that I use for this problem is a bot being exposed to a tool
-that requires pagination--If the bot cannot track the pagination state (by seeing what it invoked awhile ago) it will
-get stuck in a loop requesting the 1st page.
+that requires pagination. If the bot cannot track the pagination state (by seeing what it invoked awhile ago), it will
+get stuck in a loop requesting the first page.
 
 In all, I'm excited to see where the Spring AI project goes. I think it has a lot of potential, and I'm looking forward to
 seeing how it evolves. The Spring team & community has a great track record of building robust, developer-friendly tools, 
