adjust older article phrasing + add header img for spring-ai post

--- a/website/_posts/blog/2024-03-24-Spring-AI.md
+++ b/website/_posts/blog/2024-03-24-Spring-AI.md
@@ -5,6 +5,8 @@ category: blog
 tags: Spring AI LLM Agent java AI function
 ---
 
+![header-img](https://media.johnsosoka.com/blog/2024-03-24/spring-ai-article.png)
+
 I recently came across the [Spring AI](https://docs.spring.io/spring-ai/reference/index.html) project, which "aims to 
 streamline the development of applications that incorporate artificial intelligence functionality without unnecessary complexity."
 
