fix typos, better format examples

--- a/website/_posts/blog/2024-03-24-Spring-AI.md
+++ b/website/_posts/blog/2024-03-24-Spring-AI.md
@@ -16,7 +16,7 @@ does not support function calling, which is critical for most advanced use cases
 `1.0.0-SNAPSHOT`. Function calls enable the Agent to "interact" with the rest of our software & 3rd party services--The
 framework will intercept a tool invocation request & call the appropriate method defined in the callback.
 
-**Today's Project:** Today We will be building a simple Spring AI agent that will help manage a dummy hotel booking system.
+**Today's Project:** Today, we will be building a simple Spring AI agent that will help manage a dummy hotel booking system.
 It will be able to check availability, book rooms, and look up bookings by guest name. Function calls will be used to expose
 these capabilities to the Agent.
 
@@ -240,9 +240,9 @@ wrapper functions for the `BookRoom` and `CancelBooking` methods in the `HotelBo
 #### Chat Management
 
 Spring AI doesn't appear to provide a mechanism OOTB for managing the conversation context. I will be using a simple in-memory
-using another singleton scoped spring service to manage a single conversation. 
+store using another singleton scoped spring service to manage _a single_ conversation. 
 
-**Note:** With LLM APIs they generally do not manage any of the conversation context. This is typically handled by the client,
+**Note:** With LLM APIs, they generally do not manage any of the conversation context. This is typically handled by the client,
 which will save all relevant messages & provide them upon each request for the model to generate a response.
 
 Below is the simple ConversationService I've created:
@@ -344,7 +344,7 @@ public class BookingAgent {
         return OpenAiChatOptions.builder()
                 .withFunctionCallbacks(List.of(FunctionCallbackWrapper.builder(checkAvailabilityTool)
                                 .withName("CheckAvailability")
-                                .withDescription("Helpeful for checking the availability of rooms for a specific date, this should be used before booking a room for a new guest.")
+                                .withDescription("Helpful for checking the availability of rooms for a specific date, this should be used before booking a room for a new guest.")
                                 .withResponseConverter((response) -> "" + response.available())
                                 .build(),
                         FunctionCallbackWrapper.builder(bookRoomTool)
@@ -430,7 +430,6 @@ I'm sorry, John, but it looks like there are no rooms available on February 28, 
 Added message to conversation: UserMessage{content='Do you have any availability on January 15th, 2025?', properties={}, messageType=USER}, total messages: 4
 # Agent response indicating Jan 15, 2025 is available (as expected)
 Added message to conversation: AssistantMessage{content='Great news, John! We do have rooms available on January 15th, 2025. If you'd like to proceed with booking a room, please provide me with the details, such as the number of nights you'd like to stay and any specific room preferences you may have.', properties={role=ASSISTANT, finishReason=STOP, id=chatcmpl-96K3CelXXwBTlN0SJrBDFBDS9HmcD}, messageType=ASSISTANT}, total messages: 5
-Great news, John! We do have rooms available on January 15th, 2025. If you'd like to proceed with booking a room, please provide me with the details, such as the number of nights you'd like to stay and any specific room preferences you may have.
 # User requests a booking
 Added message to conversation: UserMessage{content='Please book 1 room for John on January 15h, 2025. The check-out date will be January 21st, 2025.', properties={}, messageType=USER}, total messages: 6
 # Agent response indicating the booking was successful
